# mythesis-chatbot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: update-deploy.yml
configs/: auto_merging.yaml  basic.yaml  sentence_window.yaml
data/: eval_questions.txt
data/indices/auto_merging/04a2f4cddf/: default__vector_store.json  docstore.json  index_store.json  meta.json
data/indices/auto_merging/d5c92a9b2f/: default__vector_store.json  docstore.json  index_store.json  meta.json
data/indices/basic/: default__vector_store.json  docstore.json  index_store.json
data/indices/sentence_window/5e146e7aac/: docstore.json  index_store.json  meta.json
data/indices/sentence_window/61a981e27b/: default__vector_store.json  docstore.json  index_store.json  meta.json
scripts/: app.py  run_dashboard.py  run_evaluation.py
spaces/: README.md  app.py  welcome_message.md
src/mythesis_chatbot/: evaluation.py  metrics.py  rag_setup.py  run_evaluation.py  utils.py
