[project]
name = "mythesis-chatbot"
version = "0.1.0"
description = "A chatbot that will answer questions about my thesis."
authors = [
    {name = "Léonard Pasi",email = "leonardpasi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "trulens (>=1.4.7,<2.0.0)",
    "llama-index (>=0.12.28,<0.13.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "mythesis_chatbot", from = "src"}]

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
