[project]
name = "mythesis-chatbot"
version = "0.1.0"
description = "RAG chatbot trained on my master thesis."
authors = [
    {name = "Léonard Pasi",email = "leonardpasi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "trulens (>=1.4.7,<2.0.0)",
    "llama-index (>=0.12.28,<0.13.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "trulens-providers-openai (>=1.4.8,<2.0.0)",
    "trulens-apps-llamaindex (>=1.4.8,<2.0.0)",
    "gradio (==5.24.0)",
]

[tool.poetry]
packages = [{include = "mythesis_chatbot", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile="black"
known_first_party=["mythesis_chatbot"]
known_third_party=["llamaindex", "trulens"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
